--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@
                       style={{ ...inputStyle, cursor: "pointer", fontSize: 12, padding: "6px 4px" }}
                     >
                       <option value="">Ruolo</option>
-                      <option value="Palleggiatore">Pallegg.</option>
-                      <option value="Schiacciatore">Schiacc.</option>
+                      <option value="Palleggiatore">Palleggiatore</option>
+                      <option value="Schiacciatore">Schiacciatore</option>
                       <option value="Tutto">Tutto</option>
                     </select>
                     <select
