--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         <div style={containerStyle}>
           <div style={{ textAlign: "center", marginBottom: 24 }}>
             <h1 style={{ margin: 0, fontSize: 28, color: "#1e293b" }}>🏐 Volley Sturno 🏐</h1>
-            <p style={{ color: "#64748b", marginTop: 8 }}>Pianifica e visualizza tutte le rotazioni della tua squadra</p>
+            <p style={{ color: "#64748b", marginTop: 8 }}>Pianifica, crea squadre casuali, e visualizza tutte le rotazioni della tua squadra</p>
           </div>
 
           <div style={{ display: "flex", gap: 12, justifyContent: "center", marginBottom: 20 }}>
